<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>


    <string name="label_title">Title</string>
    <string name="label_type">Type</string>
    <string name="label_material">Material</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_price">Price</string>

    <string name="material_ceramic">Ceramic</string>
    <string name="material_plastic">Plastic</string>
    <string name="material_metal">Metal</string>


    <string name="hint_title">Title</string>
    <string name="hint_price">Price</string>
    <string name="hint_type">Type</string>
    <string name="hint_quantity">Quantity</string>

    <string name="unit_price">$</string>

    <string name="editor_insert_cup_successful">Cup saved</string>

    <string name="editor_insert_cup_failed">Error with saving cup</string>

    <string name="editor_update_cup_successful">Cup updated</string>

    <string name="editor_update_cup_failed">Error with updating cup</string>

    <string name="editor_delete_cup_successful">Cup deleted</string>

    <string name="editor_delete_cup_failed">Error with deleting cup</string>

    <string name="editor_activity_title_edit_cup">Edit Cup</string>

    <string name="unknown_price">Unknown price</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <string name="empty_view_subtitle_text">Get started by adding a cup. \nFor this just click in the cup bellow</string>

    <string name="editor_activity_title_new_cup">Add a Cup</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="delete_dialog_msg">Delete this cup?</string>

    <string name="item_sold">item sold</string>

    <string name="select_image">Select image</string>




</resources>
