<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/medium_padding"
    tools:context=".ui.EditActivity">

    <!-- Title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/label_title"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_title"
                android:hint="@string/hint_title"
                android:inputType="textCapWords"
                style="@style/EditFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Material -->
    <LinearLayout
        android:id="@+id/container_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/label_material"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Material drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_material"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- quantity -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/label_quantity"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_quantity"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                style="@style/EditFieldQuantityStyle" />

            <Button
                android:id="@+id/btIncrease"
                android:text="+"
                style="@style/IncreaseDecreaseStyle"
                android:layout_toRightOf="@id/edit_quantity"
                />

            <Button
                android:id="@+id/btDecrease"
                android:text="-"
                style="@style/IncreaseDecreaseStyle"
                android:layout_toRightOf="@id/btIncrease"
                />

        </RelativeLayout>
    </LinearLayout>


    <!-- type -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/label_type"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_type"
                android:hint="@string/hint_type"
                android:inputType="textCapWords"
                style="@style/EditFieldStyle" />
        </LinearLayout>
    </LinearLayout>


    <!-- price -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/label_price"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Units for price ($) -->
            <TextView
                android:id="@+id/label_price"
                android:text="@string/unit_price"
                style="@style/EditUnitsStyle"/>

            <!-- price field -->
            <EditText
                android:id="@+id/edit_price"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal"
                style="@style/EditFieldPriceStyle" />


        </RelativeLayout>
    </LinearLayout>


    <!-- image -->
    <LinearLayout
        android:id="@+id/container_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/select_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/select_image"
            android:layout_weight="1"/>

    </LinearLayout>


    <!-- buttons -->
    <LinearLayout
        android:id="@+id/container_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/large_padding"
            android:src="@drawable/ic_save_black_24dp" />

        <ImageButton
            android:id="@+id/btContactSupplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/large_padding"
            android:src="@drawable/ic_add_shopping_cart_black_24dp" />

        <ImageButton
            android:id="@+id/btDeleteCup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/large_padding"
            android:src="@drawable/ic_delete_black_24dp" />

    </LinearLayout>

</LinearLayout>
